Fix homepage bug so that video is view height and footer is stuck to the bottom.

--- a/src/components/Video.css
+++ b/src/components/Video.css
@@ -15,9 +15,8 @@
 .homeVideo .homeVideoText {
     text-align: center;
     position: absolute;
-    margin: auto;
+    margin: auto 0;
     width: 100%;
-    height: 100%;
     top: 40vh;
 }
 
